Added hud icon and keybind

--- a/src/client/resources/assets/eyeframes/lang/en_us.json
+++ b/src/client/resources/assets/eyeframes/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "screens.Face": "Customize Your Face!"
+  "screens.eyeframes.face": "Customize Your Face!",
+  "key.eyeframes.control": "Control Eyes"
 }
