Set up settings screen and radial menu

--- a/src/client/resources/assets/eyeframes/lang/en_us.json
+++ b/src/client/resources/assets/eyeframes/lang/en_us.json
@@ -1,4 +1,4 @@
 {
-  "screens.eyeframes.face": "Customize Your Face!",
+  "screens.eyeframes.head_viewer": "Customize Your Face!",
   "key.eyeframes.control": "Control Eyes"
 }
